--- a/src/components/Coverflow/index.scss
+++ b/src/components/Coverflow/index.scss
@@ -4,12 +4,18 @@
     background: rgba(0, 0, 0, .1);
     margin: 0 auto;
     padding: 0;
+    width: 100%;
+    padding-top: 50%;
     overflow: hidden;
     outline: none;
   }
   
   .coverflow {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -36,7 +42,7 @@
     backface-visibility: hidden;
     z-index: 9;
     align-self: center;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
     // TODO: box-reflect crashing the app. Resolve issue
     -webkit-box-reflect: below 1px -webkit-linear-gradient(bottom, rgba(black, .6) , rgba(black, .1) 20%, rgba(black, 0) 30%, rgba(black, 0));
   }
